--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Hammersmith-One;
+    src: url(assets/fonts/HammersmithOne-Regular.ttf);
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Hammersmith-One;
+    box-sizing: border-box;
+    color: #444;
+}
+
+a {
+    text-decoration: none;
+    color: #444;
+    transition: .4s;
+}
+
+a:hover {
+    color: #072D44;
+}
