--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-header></app-header>
-<main class="container">
+<ng-container *ngIf="!isLoginPage(); else loginPage">
+  <app-header></app-header>
+  <main class="container">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</ng-container>
+
+<ng-template #loginPage>
   <router-outlet></router-outlet>
-</main>
-<app-footer></app-footer>
+</ng-template>
