--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
     font-family: Hammersmith-One;
     src: url(assets/fonts/HammersmithOne-Regular.ttf);
