--- a/frontend/src/app/components/pages/login/login.component.css
+++ b/frontend/src/app/components/pages/login/login.component.css
@@ -41,6 +41,18 @@
     outline: none;
 }
 
+.validation-error {
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all linear 160ms;
+    outline: none;
+    border: 10px solid #e77373;
+    background-color: #f0b2b2;
+  }
+
 .form-login input:focus {
     border: 1px solid #064469;
 }
@@ -89,9 +101,4 @@
     background-color: #072D44;
     color: white;
 }
-
-.error {
-    border: 10px solid #e77373;
-    background-color: #f0b2b2;
-  }
   
