--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,30 +1,41 @@
 <div class="page">
-  <form class="form-login">
+  <form
+    class="form-login"
+    (ngSubmit)="submit()"
+    [formGroup]="userLoginForm"
+    #formDir="ngForm"
+  >
     <div class="logo">
       <img src="../../../../assets/images/logo.png" alt="Logo MindPlus" />
     </div>
-    <div>
+    <div
+      [ngClass]="{
+        'validation-error': userLoginForm.invalid && userLoginForm.touched
+      }"
+    >
       <input
         type="email"
         id="email"
-        [ngClass]="{ error: errorFields.includes('email') }"
         name="email"
         placeholder="E-mail"
         autofocus="true"
-        [(ngModel)]="user.email"
-        (keyup.enter)="onEnterPressed()"
+        formControlName="email"
+        required
+        autocomplete="on"
+        (keydown.enter)="submit()"
       />
     </div>
     <div>
       <input
         type="password"
         id="password"
-        [ngClass]="{ error: errorFields.includes('password') }"
         name="password"
         placeholder="Senha"
         autofocus="true"
-        [(ngModel)]="user.password"
-        (keyup.enter)="onEnterPressed()"
+        formControlName="password"
+        required
+        autocomplete="on"
+        (keydown.enter)="submit()"
       />
     </div>
     <div class="keep-logged" (click)="toggleCheckbox()">
@@ -32,11 +43,9 @@
         type="checkbox"
         id="keepLogged"
         name="keepLogged"
-        [(ngModel)]="user.keepLogged"
+        formControlName="keepLogged"
       />Mantenha-me logado
     </div>
-    <button type="button" class="btn-entrar" (click)="onLoginClick()">
-      Entrar
-    </button>
+    <button type="button" class="btn-entrar" (click)="submit()">Entrar</button>
   </form>
 </div>
