--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,22 +1,24 @@
 <div class="page">
-  <form class="form-login" (ngSubmit)="onSubmit()">
+  <form class="form-login" #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="logo">
       <img src="../../../../assets/images/logo.png" alt="Logo MindPlus" />
     </div>
     <input
+      name="email"
       type="email"
       id="email"
       autocomplete="on"
       placeholder="E-mail"
-      [(ngModel)]="usuario.email"
+      ngModel required #email="ngModel"
     />
     <div>
       <input
+        name="password"
         type="password"
         id="password"
         autocomplete="on"
         placeholder="Senha"
-        [(ngModel)]="usuario.password"
+        ngModel required #password="ngModel"
       />
     </div>
     <div class="keep-logged">
