--- a/frontend/src/app/components/pages/login/login.component.css
+++ b/frontend/src/app/components/pages/login/login.component.css
@@ -30,7 +30,7 @@
     margin: 30px;
 }
 
-.form-login input[type="email"], input[type="password"] {
+.form-login input[type="email"], input[type="senha"] {
     width: 100%;
     height: 40px;
     margin: 10px 0 0px 0;
