--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="page">
   <form
     class="form-login"
-    #userLoginForm="ngForm"
-    (ngSubmit)="onSubmit(userLoginForm)"
+    #usuarioLoginForm="ngForm"
+    (ngSubmit)="onSubmit(usuarioLoginForm)"
   >
     <div class="logo">
       <img src="../../../../assets/images/logo.png" alt="Logo MindPlus" />
