--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,9 +4,8 @@
     <h2>Mind+</h2>
   </a>
   <ul class="links">
+    <li><a routerLink="/usuario/cadastro">Colaboradores</a></li>
+    <li><a routerLink="/perfil">Perfil</a></li>
     <li><a routerLink="/login">Login</a></li>
-    <li id="link-colaboradores">
-      <a routerLink="/usuario/cadastro">Colaboradores</a>
-    </li>
   </ul>
 </nav>
