Alterando o nome da opção perfil na header.

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   </a>
   <ul class="links">
     <li><a routerLink="/usuario/cadastro">Colaboradores</a></li>
-    <li><a routerLink="/perfil">Perfil</a></li>
+    <li><a routerLink="/perfil">Meu Perfil</a></li>
     <li><a routerLink="/login">Login</a></li>
   </ul>
 </nav>
