fix: fixing navbar color

--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: #5790AB;
+    background-color: #004AAD;
     padding: 0 1em 0 1em;
     height: 100px;
 }
