--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-  <h3>Compartilhe seus melhores momentos</h3>
+  <p>Compartilhe seus melhores momentos</p>
   <p>Mind+ &copy;2024</p>
 </footer>
