--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -1,1 +1,43 @@
-<p>Fazer tela de perfil do usuário aqui</p>
+<div class="perfil-page">
+    <div class="user-page flex">
+        <div class="user-info">
+            <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
+            <h1>Paola Kloch</h1>
+        </div>
+        <div class="user-data">
+            <div class="info-grid1">
+                <form action="">
+                    <div class="container-info">
+                        <span>E-mail</span>
+                        <input type="text" id="email" class="label-name" value="paola.lopes@mouts.info">
+                    </div>
+                    <div class="container-info">
+                        <span>Telefone</span>
+                        <input type="text" id="contato" class="label-name" value="(47) 99286-1109">
+                    </div>
+                    <div class="container-info">
+                        <span>Endereço</span>
+                        <input type="text" id="endereco" class="label-name" value="Indaial">
+                    </div>
+                </form>
+            </div>
+            <div class="info-grid2">
+                <div class="container-info">
+                    <span>Cargo</span>
+                    <input type="text" id="cargo" class="label-name" value="SDR">
+                </div>
+                <div class="container-info">
+                    <span>Modelo de contratação</span>
+                    <input type="text" id="modeloContratacao" class="label-name" value="PJ">
+                </div>
+                <div class="container-info">
+                    <span>Empresa</span>
+                    <input type="text" id="minhaEmpresa" class="label-name" value="Mouts TI">
+                </div>
+            </div>
+            <div class="button-user">
+                <button type="button" id="button-save">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
