--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -1,50 +1,6 @@
 .homepage {
-    height: 100%;
+    height: 70vh;
     background-color: aliceblue;
-}
-
-.homepage-frase {
-    align-items: center;
-    justify-content: center;
-
-}
-
-.homepage-square {
-    flex-direction: column;
-    text-align: center;
-    margin-bottom: 50px;
-    width: 100%;
-    height: 100px;
-    padding: 50px;
-    padding-bottom: 100px;
-    font-family: Hammersmith-One;
-    color: rgb(255, 255, 255);
-    background-color: rgb(126, 173, 235);
-
-
-    .frase {
-        flex-direction: row;
-        text-align: center;
-    }
-
-
-    img {
-        width: 30px;
-        height: 20px;
-    }
-
-    h2 {
-        font-size: 30px;
-        place-content: center;
-        text-align: center;
-        color: #fff;
-    }
-
-    h4 {
-        font-size: 20px;
-        text-align: center;
-        place-content: center;
-    }
 }
 
 .grid {
