--- a/frontend/src/app/components/pages/perfil/perfil.component.css
+++ b/frontend/src/app/components/pages/perfil/perfil.component.css
@@ -1,85 +1,141 @@
+
+
 .user-page {
     display: flex;
     background-color: aliceblue;
+    min-height: 300px;
+    font-family: 'Courier New', Courier, monospace;
   }
   
-  .user-info {
-    width: 100px;
-    margin: 50px;
-  }
+.user-info {
+  width: 100px;
+  margin: 50px;
   
-  .user-info img {
+  img {
     width: 100px;
     border-radius: 90px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
-  
-  .user-info h1 {
+
+  p {
     text-align: center;
   }
-  
-  .user-data {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 210px;
-  }
-  
-  .info-grid1 {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .info-grid1 h2 {
+}
+
+.user-data {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 210px;
+}
+
+.info-grid {
+  display: flex;
+  flex-direction: column;
+
+  h2 {
     margin-top: 30px;
     margin-left: 30px;
   }
-  
-  .info-grid2 {
-    display: flex;
-    flex-direction: column;
+
+  form {
+    margin-top: 100px;
   }
-  
-  .info-grid2 h2 {
-    margin-top: 30px;
-    margin-left: 100px;
-  }
-  
-  .container-info {
-    display: flex;
-    flex-direction: column;
-    background: white;
-    padding: 10px;
-    padding-top: 0px;
-    margin-top: 15px;
-    margin-left: 20px;
-    border: 1px solid rgb(193, 215, 228);
-    border-radius: 3px;
-  }
-  
-  .container-info span {
+}
+
+.container-info {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  padding: 10px;
+  margin: 20px;
+  border: 1px solid rgb(193, 215, 228);
+  border-radius: 3px;
+
+  span {
     font-size: 10px;
   }
-  
-  .container-info input {
+
+  input {
     outline: none;
   }
-  
-  .button-user {
+
+  .label-name {
+    margin-top: 5px;
+    border: 0px transparent;
+    border-radius: 3px;
+    padding: 5px;
+  }
+}
+
+.button-user {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#button-save {
+  padding: 5px;
+  margin-top: 15px;
+  margin-left: 20px;
+  color: rgb(255, 255, 255);
+  background: #064469;
+  border-radius: 2px;
+  border: 1px solid rgb(193, 215, 228);
+}
+
+#button-save:hover {
+  background-color: #072D44;
+}
+
+@media (max-width: 430px) {
+  .user-page {
+    background-color: aliceblue;
+    display: flex;
+    height: 500px;
+  }
+
+  .user-info {
+    width: 80px;
+    margin: 50px;
+
+    img {
+      width: 80px;
+      align-items: center;
+      border-radius: 90px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 15px;
+    }
+  }
+
+  .user-data {
+    width: 100px;
+    height: 300px;
+    flex-wrap: wrap;
+  }
+
+  .info-grid {
     display: flex;
     flex-direction: column;
+
+    h2 {
+      margin-top: 30px;
+      margin-left: 30px;
+      margin-bottom: 0px;
+      width: 430px;
+    }
+  }
+
+  .button-user {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
   }
-  
-  /* #button {
-    background: white;
-    padding: 5px;
-    margin-top: 15px;
-    margin-left: 20px;
-    border-radius: 2px;
-    border: 1px solid rgb(193, 215, 228);
-  } */
-  
+
   #button-save {
     padding: 5px;
     margin-top: 15px;
@@ -89,72 +145,4 @@
     border-radius: 2px;
     border: 1px solid rgb(193, 215, 228);
   }
-  
-  @media (max-width: 430px) {
-    .user-page {
-      background-color: aliceblue;
-      display: flex;
-      height: 500px;
-    }
-  
-    .user-info {
-      width: 80px;
-      margin: 50px;
-    }
-  
-    .user-info img {
-      width: 80px;
-      align-items: center;
-      border-radius: 90px;
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
-  
-    .user-info h1 {
-      text-align: center;
-      font-size: 15px;
-    }
-  
-    .user-data {
-      width: 100px;
-      height: 300px;
-      flex-wrap: wrap;
-    }
-  
-    .info-grid1 {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .info-grid1 h2 {
-      margin-top: 30px;
-      margin-left: 30px;
-      margin-bottom: 0px;
-      width: 430px;
-    }
-  
-    .info-grid2 {
-      display: flex;
-    }
-  
-    .info-grid2 h2 {
-      margin-top: 30px;
-      margin-left: 30px;
-      width: 430px;
-    }
-  
-    .button-user {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
-  
-    #button-save {
-      padding: 5px;
-      margin-top: 15px;
-      margin-left: 20px;
-      color: rgb(255, 255, 255);
-      background: #666;
-      border-radius: 2px;
-      border: 1px solid rgb(193, 215, 228);
-    }
-  }
+}
