--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 @font-face {
     font-family: Hammersmith-One;
     src: url(assets/fonts/HammersmithOne-Regular.ttf);
