agendamento add, rotas adicionadas

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,7 +4,11 @@
     <h2>Mind+</h2>
   </a>
   <ul class="links">
-    <li><a routerLink="/usuario/cadastro">Colaboradores</a></li>
+    <!--<li><a routerLink="/usuario/cadastro">Colaboradores</a></li>-->
+    <li><a routerLink="/admin">AvaliaçõesADM</a></li>
+    <li><a routerLink="/colaborador">AvaliaçõesCOLAB</a></li>
+    <li><a routerLink="/colaboradores">Colaboradores</a></li>
+    <li><a routerLink="/agendamento">Agendamento</a></li>
     <li><a routerLink="/perfil">Meu Perfil</a></li>
     <li><a routerLink="/login">Login</a></li>
   </ul>
