--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,11 +1,11 @@
 footer {
-    border-top: 1px solid #004AAD;
+    border-top: 1px solid #185376;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 150px;
-    background-color: #004AAD;
+    background-color: #185376;
     color: white;
 
     p {
