--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -4,11 +4,14 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 150px;
+    height: 90px;
+    width: 100%;
     background-color: #185376;
     color: white;
+    position: absolute;
+    bottom: 0;
 
     p {
-        padding: 10px;
+        padding: 4px;
     }
 }
