--- a/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/colaboradores.component.html
@@ -19,7 +19,7 @@
                   <input type="text" placeholder="Pesquisar Colaborador">
                 </th>
                 <th>
-                  <input type="button" name="Adicionar-colaborador" value="Adicionar Colaborador">
+                  <input type="button"  name="Adicionar-colaborador" value="Adicionar Colaborador" class="botao-addcolab">
                 </th>
               </tr>
             </thead>
