--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -8,81 +8,75 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
 
-    .card {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 300px;
-        border-radius: 4px;
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        background-color: #f7fbfce0;
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    border-radius: 4px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #f7fbfce0;
+}
 
-        img {
-            width: 100%;
-            height: 200px;
-            padding: 10px
-        }
+.card img {
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+}
 
-        h2 {
-            font-size: 20px;
-            text-align: center;
-            font-weight: lighter;
-        }
+.card h2 {
+    font-size: 20px;
+    text-align: center;
+    font-weight: lighter;
+}
 
-        p {
-            height: 150px;
-            margin-bottom: 30px;
-            padding: 20px;
-            color: #66666692;
-        }
+.card p {
+    height: 150px;
+    margin-bottom: 30px;
+    padding: 20px;
+    color: #66666692;
+}
 
-        button {
-            text-align: center;
-            border: none;
-            margin: 10px;
-            height: 30px;
-            width: 90%;
-            font-size: 16px;
-            color: #fff;
-            background-color: #0856bcc5;
-            border-radius: 4px;
-            cursor: pointer;
+.card button {
+    text-align: center;
+    border: none;
+    margin: 10px;
+    height: 30px;
+    width: 90%;
+    font-size: 16px;
+    color: #fff;
+    background-color: #0856bcc5;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
-            button :hover {
-                background-color: #004aad;
-                color: white;
-            }
-        }
-    }
+.card button:hover {
+    background-color: #004aad;
+    color: white;
 }
 
 .container {
     border-radius: 4px;
+}
 
+.container h1 {
+    font-size: 20px;
+    font-family: Hammersmith-One;
+    text-align: center;
+    margin-bottom: 80px;
+    color: #004aad;
+}
 
-    h1 {
-        font-size: 20px;
-        font-family: Hammersmith-One;
-        text-align: center;
-        margin-bottom: 80px;
-        color: #004aad;
-    }
-
-    p {
-        text-align: left;
-    }
+.container p {
+    text-align: left;
 }
 
 .card {
     margin: 40px;
     border-radius: 2px;
-
-    h2 {
-        color: #004aad;
-        font-family: Hammersmith-One;
-    }
 }
 
 @media (max-width: 430px) {
@@ -106,58 +100,58 @@
         padding: 10px;
         box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
         gap: 5px;
+    }
 
-        h2 {
-            font-size: 20px;
-            text-align: center;
-            color: #fff;
-        }
+    .homepage-square h2 {
+        font-size: 20px;
+        text-align: center;
+        color: #fff;
+    }
 
-        h4 {
-            font-size: 10px;
-        }
+    .homepage-square h4 {
+        font-size: 10px;
     }
 
     .grid {
         display: inline-block;
         align-items: center;
         justify-content: center;
+    }
 
-        .card {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border-radius: 4px;
-            border-style: none;
-            height: 350px;
-            width: 350px;
-            margin-bottom: 50px;
-            background-color: #004badcf;
-            border-radius: 20px;
+    .grid .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        border-style: none;
+        height: 350px;
+        width: 350px;
+        margin-bottom: 50px;
+        background-color: #004badcf;
+        border-radius: 20px;
+    }
 
-            h2 {
-                margin-bottom: 20px;
-                text-align: center;
-                color: #fff;
-            }
+    .grid .card h2 {
+        margin-bottom: 20px;
+        text-align: center;
+        color: #fff;
+    }
 
-            p {
-                text-align: left;
-                font-size: 18px;
-                font-family: hammersmith-one;
-                padding-left: 50px;
-                padding-right: 50px;
-                color: #fff;
-            }
+    .grid .card p {
+        text-align: left;
+        font-size: 18px;
+        font-family: hammersmith-one;
+        padding-left: 50px;
+        padding-right: 50px;
+        color: #fff;
+    }
 
-            button {
-                text-align: left;
-                font-size: 16px;
-                color: #fff;
-                background-color: transparent;
-                cursor: pointer;
-            }
-        }
+    .grid .card button {
+        text-align: left;
+        font-size: 16px;
+        color: #fff;
+        background-color: transparent;
+        cursor: pointer;
     }
 }
