--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="user-page flex">
+<div class="user-page">
     <div class="user-info">
         <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
         <p>{{ usuarioEntity.nome }}</p>
