Ajustes nos posicionamentos

--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -36,8 +36,8 @@
                 </div>
             </form>
         </div>
-        <div>
-            <button type="button" id="button-save" (click)="onSubmit(usuarioEntityForm)">Salvar</button>
-        </div>
+    </div>
+    <div class="button-user">
+        <button type="button" id="button-save" (click)="onSubmit(usuarioEntityForm)">Salvar</button>
     </div>
 </div>
