--- a/frontend/src/app/components/pages/perfil/perfil.component.css
+++ b/frontend/src/app/components/pages/perfil/perfil.component.css
@@ -29,8 +29,7 @@
   .user-data {
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 210px;
+    flex-wrap: wrap;
   }
 
   .info-grid {
@@ -43,7 +42,8 @@
     }
 
     form {
-      margin-top: 100px;
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
   }
 
@@ -79,18 +79,23 @@
   }
 
   #button-save {
-    padding: 5px;
-    margin-top: 15px;
-    margin-left: 20px;
+    display: flex;
+    padding: 10px;
     color: rgb(255, 255, 255);
     background: #064469;
-    border-radius: 2px;
-    border: 1px solid rgb(193, 215, 228);
+    border-radius: 8px;
+    border-style: none;
+    box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+    padding: 10px 21px;
   }
 
   #button-save:hover {
     background-color: #072D44;
-    cursor: pointer;
   }
 }
 
