--- a/frontend/src/app/components/pages/perfil/perfil.component.css
+++ b/frontend/src/app/components/pages/perfil/perfil.component.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     background-color: aliceblue;
     height: 75vh;
@@ -76,6 +76,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 64%;
   }
 
   #button-save {
