--- a/frontend/src/app/components/pages/perfil/perfil.component.css
+++ b/frontend/src/app/components/pages/perfil/perfil.component.css
@@ -56,7 +56,7 @@
     border: 1px solid rgb(193, 215, 228);
     border-radius: 3px;
 
-    span {
+    label {
       font-size: 10px;
     }
 
@@ -76,7 +76,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 64%;
   }
 
   #button-save {
