--- a/frontend/src/app/components/pages/perfil/perfil.component.html
+++ b/frontend/src/app/components/pages/perfil/perfil.component.html
@@ -1,43 +1,39 @@
 <div class="user-page">
-    <div class="user-info">
-        <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
-        <p>{{ usuarioEntity.nome }}</p>
-    </div>
-    <div class="user-data">
-        <div class="info-grid">
-            <form #usuarioEntityForm="ngForm">
-                <div class="container-info">
-                    <span>E-mail</span>
-                    <input type="text" id="email" class="label-name" value="{{ usuarioEntity.email }}" ngModel required #email="ngModel">
-                </div>
-                <div class="container-info">
-                    <span>Telefone</span>
-                    <input type="text" id="contato" class="label-name" value="{{ usuarioEntity.telefone }}" ngModel required #telefone="ngModel">
-                </div>
-                <div class="container-info">
-                    <span>Endereço</span>
-                    <input type="text" id="endereco" class="label-name" value="{{ usuarioEntity.endereco }}" ngModel required #endereco="ngModel">
-                </div>
-            </form>
+    <form [formGroup]="usuarioFormGroup">
+        <div class="user-info">
+            <img src="../../assets/images/user-picture.jpg" alt="user-pic" />
+            <p name="nome" id="nome" formControlName="nome" required></p>
         </div>
-        <div class="info-grid">
-            <form #usuarioEntityForm="ngForm"  [formGroup]="formGroup" >
+        <div class="user-data">
+            <div class="info-grid">
                 <div class="container-info">
-                    <span>Empresa</span>
-                    <input type="text" id="minhaEmpresa" class="label-name"formControlName="funcao" required>
+                    <label for="email">E-mail</label>
+                    <input type="text" class="label-name" name="email" id="email" formControlName="email" required>
                 </div>
                 <div class="container-info">
-                    <span>Função</span>
-                    <input type="text" id="funcao" class="label-name" value="{{ usuarioEntity.funcao }}" ngModel required #funcao="ngModel">
+                    <label for="telefone">Telefone</label>
+                    <input type="text" class="label-name" name="telefone" id="telefone" formControlName="telefone" required>
                 </div>
                 <div class="container-info">
-                    <span>Status</span>
-                    <input type="text" id="status" class="label-name" value="{{ usuarioEntity.status }}" ngModel required #status="ngModel">
+                    <label for="endereco">Endereço</label>
+                    <input type="text" class="label-name" name="endereco" id="endereco" formControlName="endereco" required>
                 </div>
-            </form>
+                <div class="container-info">
+                    <label for="empresa">Empresa</label>
+                    <input type="text" class="label-name" name="empresa" id="empresa" formControlName="empresa" required>
+                </div>
+                <div class="container-info">
+                    <label for="funcao">Função</label>
+                    <input type="text" class="label-name" name="funcao" id="funcao" formControlName="funcao" required>
+                </div>
+                <div class="container-info">
+                    <label for="status">Status</label>
+                    <input type="text" class="label-name" name="status" id="status" formControlName="status" required>
+                </div>
+                <div class="button-user">
+                    <button type="button" id="button-save" (click)="onSubmit(usuarioFormGroup)">Salvar</button>
+                </div>
+            </div> 
         </div>
-        <div class="button-user">
-            <button type="button" id="button-save" (click)="onSubmit(usuarioEntityForm)">Salvar</button>
-        </div>
-    </div>
+    </form>
 </div>
