--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -1,33 +1,35 @@
+/* Style the tab */
 .tab {
-    display: flex;
-    justify-content: flex-end;
-    background-color: #f0f0f0;
-  }
-  
-  .tablinks {
-    padding: 10px 20px;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    color: blue;
-  }
-  
-  .tablinks:hover {
-    background-color: #e0e0e0;
-  }
-  
-  .avaliacoes {
-    display: flex;
-  }
-  
-  .tabcontent {
-    display: none;
-    padding: 20px;
-    border: 1px solid #ccc;
-  }
-  
-  .tab tablinks.active {
-    display: block;
-  }
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
 
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
 
-  
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
