--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -1,19 +1,22 @@
+<!-- Tab links -->
 <div class="tab">
-  <div class="tablinks" (click)="openForm('Satisfação no Trabalho')">Satisfação no Trabalho</div>
-  <div class="tablinks" (click)="openForm('Satisfação Pessoal')">Satisfação Pessoal</div>
-  <div class="tablinks" (click)="openForm('Relações Interpessoais')">Relações Interpessoais</div>
+  <button class="tablinks" (click)="openForm($event, 'ST')">Satisfação no Trabalho</button>
+  <button class="tablinks" (click)="openForm($event, 'SP')">Satisfação Pessoal</button>
+  <button class="tablinks" (click)="openForm($event, 'RI')">Relações Interpessoais</button>
 </div>
-<div class="avaliacoes">
-  <div class="tabcontent" id="ST" [hidden]="!openST">
-    <!-- Conteúdo da avaliação de Satisfação no Trabalho -->
-    Avaliação de Satisfação no Trabalho...
-  </div>
-  <div class="tabcontent" id="SP" [hidden]="!openST">
-    <!-- Conteúdo da avaliação de Satisfação Pessoal -->
-    Avaliação de Satisfação Pessoal...
-  </div>
-  <div class="tabcontent" id="RI" [hidden]="!openST">
-    <!-- Conteúdo da avaliação de Relações Interpessoais -->
-    Avaliação de Relações Interpessoais...
-  </div>
+
+<!-- Tab content -->
+<div id="ST" class="tabcontent">
+  <h3>Satisfação no Trabalho</h3>
+  <p>TESTE de Satisfação no Trabalho...</p>
+</div>
+
+<div id="SP" class="tabcontent">
+  <h3>Satisfação Pessoal</h3>
+  <p>TESTE de Satisfação Pessoal...</p>
+</div>
+
+<div id="RI" class="tabcontent">
+  <h3>Relações Interpessoais</h3>
+  <p>TESTE de Relações Interpessoais...</p>
 </div>
